--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "linter": "eslint . --fix; stylelint \"**/*.css\" --fix"
+    "linter": "eslint . --fix; stylelint \"**/*.scss\" --fix"
   },
   "eslintConfig": {
     "extends": [
